--- a/requirements.txt
+++ b/requirements.txt
@@ -1,170 +1,7 @@
-absl-py==0.13.0
-altair==4.2.0
-anyio==3.1.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-astor==0.8.1
-astroid==2.4.0
-astunparse==1.6.3
-attrs==21.4.0
-Babel==2.9.1
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-base58==2.1.1
-beautifulsoup4==4.10.0
-bleach==4.1.0
-blinker==1.4
-Brotli==1.0.9
-cachetools==4.2.2
-certifi==2021.5.30
-cffi==1.15.0
-charset-normalizer==2.0.3
-click==7.1.2
-colorama==0.4.3
-cycler==0.11.0
-dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.5.1
-decorator==5.1.0
-defusedxml==0.7.1
-docopt==0.6.2
-dominate==2.6.0
-entrypoints==0.3
 Flask==2.0.1
-Flask-Bootstrap==3.3.7.1
-Flask-Compress==1.10.1
-flatbuffers==1.12
-fonttools==4.28.2
-freegames==2.3.2
-gast==0.4.0
-gitdb==4.0.9
-GitPython==3.1.24
-google-auth==1.33.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-grpcio==1.34.1
-gunicorn==20.1.0
-h5py==3.1.0
-idna==3.2
-importlib-resources==5.4.0
-ipykernel==6.6.0
-ipython==7.30.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.5
-isort==4.3.21
-itsdangerous==2.0.1
-jedi==0.18.1
-Jinja2==3.0.1
-joblib==1.0.1
-json5==0.9.5
-jsonschema==4.3.2
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-jupyter-server==1.8.0
-jupyterlab==3.0.16
-jupyterlab-pygments==0.1.2
-jupyterlab-server==2.6.0
-jupyterlab-widgets==1.0.2
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-lazy-object-proxy==1.4.3
-Markdown==3.3.4
-MarkupSafe==2.0.1
 matplotlib==3.5.0
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mistune==0.8.4
-nbclassic==0.3.1
-nbclient==0.5.9
-nbconvert==6.3.0
-nbformat==5.1.3
-nest-asyncio==1.5.4
-nltk==3.6.5
-notebook==6.4.6
 numpy==1.19.5
-oauthlib==3.1.1
-opt-einsum==3.3.0
-packaging==21.3
 pandas==1.3.0
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.2
-pickleshare==0.7.5
-Pillow==8.4.0
-pipreqs==0.4.11
-plotly==5.4.0
-ply==3.11
-prometheus-client==0.12.0
-prompt-toolkit==3.0.24
-protobuf==3.17.3
-pure-sasl==0.6.2
-pyarrow==6.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydeck==0.7.1
-pyglet==1.5.5
-Pygments==2.11.1
-pylint==2.5.0
-Pympler==1.0.1
-pyparsing==3.0.6
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==5.4.1
-pyzmq==22.3.0
-regex==2021.10.8
-requests==2.26.0
-requests-oauthlib==1.3.0
-rsa==4.7.2
-scikit-learn==0.24.2
-scipy==1.7.0
+scikit_learn==1.0.2
 seaborn==0.11.2
-Send2Trash==1.8.0
-setuptools-scm==6.3.2
-six==1.15.0
-sklearn==0.0
-smmap==5.0.0
-sniffio==1.2.0
-soupsieve==2.3
-statsmodels==0.13.1
-streamlit==1.3.1
-tenacity==8.0.1
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-docs @ git+https://github.com/tensorflow/docs@621fcf53da087251567f7b05bd1d6fe2db492713
-tensorflow-estimator==2.5.0
-tensorflow-gpu==2.5.0
-termcolor==1.1.0
-terminado==0.12.1
-testpath==0.5.0
-threadpoolctl==2.2.0
-thriftpy2==0.4.14
-toml==0.10.0
-tomli==1.2.2
-toolz==0.11.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-typing-extensions==3.7.4.3
-tzdata==2021.5
-tzlocal==4.1
-urllib3==1.26.6
-validators==0.18.2
-visitor==0.1.3
-watchdog==2.1.6
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.2
-widgetsnbextension==3.5.2
-wikipedia==1.4.0
-wrapt==1.12.1
-yarg==0.1.9
-zipp==3.7.0
+gunicorn
